[package]
name = "summarizer"
version = "0.1.0"
authors = ["Moshe Zadka <zadka.moshe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = {version = "*", features = ["diesel_mysql_pool"] }
serde = {version = "*", features = ["derive"] }
diesel = "*"
