[package]
name = "summarizer"
version = "0.1.0"
authors = ["Moshe Zadka <zadka.moshe@gmail.com>"]
edition = "2018"

[lib]
name = "summarizer"
path = "src/lib.rs"

[[bin]]
name = "summarizer"


[dependencies]
rocket = "*"
rocket_contrib = {version = "*", features = ["diesel_mysql_pool"] }
serde = {version = "*", features = ["derive"] }
diesel = "*"
